# user-api-ghibli-role

./: .env.example  .gitignore  Dockerfile  ENDPOINTS.md  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/application/: auth.py  auth_service.py  ghibli_service.py  role_service.py  user_service.py  utils.py
app/domain/enums/: role_type.py
app/domain/models/: role.py  user.py
app/domain/repositories/: role_repository.py  user_repository.py
app/domain/schemas/: auth.py  role.py  user.py
app/infrastructure/api/dependencies/: auth.py
app/infrastructure/api/routes/: auth.py  ghibli.py  roles.py  users.py
app/infrastructure/config/: settings.py
app/infrastructure/database/: init_db.py  session.py
app/infrastructure/database/implementations/: in_memory_role_repository.py  in_memory_user_repository.py  sqlalchemy_role_repository.py  sqlalchemy_user_repository.py
app/infrastructure/database/models/: role_model.py  user_model.py
