[project]
name = "user-api-ghibli-role"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.117.1",
    "pydantic[email]>=2.11.9",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.37.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pyjwt>=2.0.0",
    "python-multipart>=0.0.20",
    "httpx>=0.25.0",
    "slowapi>=0.1.9",
]
